# pamflow

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  pamflow_kedro_env.yml  pyproject.toml  requirements-mac.txt  requirements-win.txt  requirements.txt
.github/workflows/: tests.yml
.viz/: stats.json
conf/base/: catalog.yml  logging.yml  parameters.yml
conf/base/catalog/: acoustic_indices.yml  birdnet.yml  data_preparation.yml  data_science.yml  ejemplo.yml  export.yml  figures.yml  graphical_soundscapes.yml  metadata.yml  quality_control.yml  species_detection.yml  timelapse.yml
conf/base/parameters/: acoustic_indices.yml  birdnet.yml  data_preparation.yml  data_science.yml  graphical_soundscapes.yml  project_info.yml  quality_control.yml  species_detection.yml  timelapse.yml
conf/local/: parameters.yml
docs/: conf.py  contributing_guidelines.md  data_exchange_format.md
docs/source/: conf.py  contributing_guidelines.md  data_exchange_format.md  docs_requirements.txt  index.md  index.rst
docs/source/advanced_tutorials/build_your_own_node/: index.md
docs/source/beginner_tutorial/: data_preparation.md  index.md  input_data.md  quality_control.md  setup.md  species_detection.md
docs/source/data_standardization/: data_exchange_format.md
docs/source/documentation/: index.md  overview.md  pipeline_details.md  running_the_workflow.md
docs/source/getting_involved/: contributing_guidelines.md  data_exchange_format.md  index.md
docs/source/tutorial/: data_preparation.md  index.md  input_data.md  quality_control.md  setup.md  species_detection.md  tutorial.md
notebooks/: especies_de_interes.ipynb
src/: pamflow_gui.py  setup.py
src/kedro_pamflow/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kedro_pamflow/datasets/: __init__.py  audio_dataset.py  audio_folder_dataset.py  image_folder_dataset.py  media.py
src/kedro_pamflow/datasets/pamDP/: CSVPamDP.py  deployments.py  media.py  observations.py
src/kedro_pamflow/pipelines/acoustic_indices/: nodes.py  pipeline.py  utils.py
src/kedro_pamflow/pipelines/birdnet/: nodes.py  pipeline.py  utils.py
src/kedro_pamflow/pipelines/data_preparation/: nodes.py  pipeline.py
src/kedro_pamflow/pipelines/data_science/: filter_species_detections.py  find_birdnet_threshold.py  nodes.py  pipeline.py  utils.py
src/kedro_pamflow/pipelines/export/: nodes.py  pipeline.py  utils.py
src/kedro_pamflow/pipelines/graphical_soundscape/: nodes.py  pipeline.py
src/kedro_pamflow/pipelines/preprocess/: nodes.py  pipeline.py  utils.py
src/kedro_pamflow/pipelines/quality_control/: nodes.py  pipeline.py
src/kedro_pamflow/pipelines/species_detection/: nodes.py  utils.py
src/pamflow/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/pamflow/datasets/: __init__.py  audio_dataset.py  audio_folder_dataset.py  image_folder_dataset.py
src/pamflow/datasets/pamDP/: deployments.py  field_deployments_sheet.py  observations.py  target_species.py
src/pamflow/pipelines/acoustic_indices/: nodes.py  utils.py
src/pamflow/pipelines/data_preparation/: nodes.py  pipeline.py
src/pamflow/pipelines/data_science/: nodes.py  pipeline.py
src/pamflow/pipelines/graphical_soundscape/: pipeline.py
src/pamflow/pipelines/quality_control/: nodes.py  pipeline.py
src/pamflow/pipelines/species_detection/: nodes.py  pipeline.py  utils.py
src/tests/: test_run.py
src/tests/pipelines/acoustic_indices/: test_node_compute_indices.py
src/tests/pipelines/data_preparation/: test_node_field_deployments_sheet_to_deployments.py  test_node_get_media_file.py  test_node_get_media_summary.py
src/tests/pipelines/graphical_soundscape/: test_node_graphical_soundscape.py
src/tests/pipelines/quality_control/: test_node_get_timelapse.py  test_node_plot_sensor_performance.py  test_node_plot_survey_effort.py
(+15 files in other folders)
