[tool.kedro]
package_name = "pamflow"
project_name = "pamFlow"
kedro_init_version = "0.19.5"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/pamflow -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.kedro_telemetry]
project_id = "5a88f4c090294f4598d637c111ade416"

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "UP",  # pyupgrade
    "I",  # isort
    "PL", # Pylint
]

[project]
name = "pamflow"
version = "0.1.0"  # Add the version here
description = "Simplified analysis for passive acoustic monitoring"
authors = [{name = "Juan Sebastian Ulloa", email = "julloa@humboldt.org.co"}, {name = "Nicolas Betancourt", email = "nbetancourtc@humboldt.org.co"}]