[tool.kedro]
package_name = "pamflow"
project_name = "pamFlow"
kedro_init_version = "0.19.5"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/pamflow -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.kedro_telemetry]
project_id = "5a88f4c090294f4598d637c111ade416"

[tool.ruff]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "UP",  # pyupgrade
    "I",  # isort
    "PL", # Pylint
]

[project]
name = "pamflow"
version = "0.1.0"  # Add the version here
description = "Simplified analysis for passive acoustic monitoring"
authors = [{name = "Juan Sebastian Ulloa", email = "julloa@humboldt.org.co"}, {name = "Nicolas Betancourt", email = "nbetancourtc@humboldt.org.co"}]
dependencies = [
    # Core dependencies
    "birdnetlib==0.17.2",
    "contextily==1.6.2",
    "fsspec==2024.9.0",
    "geopandas==1.0.1",
    "kedro==0.19.8",
    "kedro_datasets==4.1.0",
    "librosa==0.10.2",
    "openpyxl==3.1.5",
    "PyYAML==6.0.2",
    "scikit-maad==1.5.1",
    "statsmodels==0.14.4",
    "adjusttext~=1.3.0",
    "matplotlib-scalebar~=0.9",
    "tflite-runtime==2.14.0", 
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]